vlib/v/checker/tests/interface_implementing_interface.out
vlib/v/checker/tests/interface_implementing_interface.vv:15:10: error: cannot implement interface `Thing` with a different interface `Animal`
   13 | dog := Dog{}
   14 | animal := Animal(dog)
   15 | thing := Thing(animal)
      |          ~~~~~~~~~~~~~
   16 | println(thing)