vlib/v/checker/tests/interface_implementing_interface.vv
interface Thing {
    kind string
}

interface Animal {
    kind string
}

struct Dog {
    kind string = 'labrador'
}

dog := Dog{}
animal := Animal(dog)
thing := Thing(animal)
println(thing)
